--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,4 +9,12 @@
   button {
     @apply cursor-pointer
   }
+
+  input:not([type='checkbox']){
+    @apply outline-none focus:ring border border-gray-200 focus:ring-blue-500 focus:border-blue-500 rounded-lg;
+  }
+
+  textarea {
+    @apply outline-none focus:ring border border-gray-200 focus:ring-blue-500 focus:border-blue-500 rounded-lg;
+  }
 }
